--- a/src/app/minesweeper/minesweeper.component.html
+++ b/src/app/minesweeper/minesweeper.component.html
@@ -1,1 +1,38 @@
-minesweeper
+<div id="minesweeper" *ngIf="loadGame; else loader">
+  <form
+    [formGroup]="form"
+    (ngSubmit)="onSubmit()"
+    autocomplete="off"
+  >
+    <div class="input_field">
+      <label for="rows">Rows:</label>
+      <input formControlName="rows" id="rows" type="rows">
+    </div>
+    <div class="input_field">
+      <label for="cols">Cols:</label>
+      <input formControlName="cols" id="cols" type="cols">
+    </div>
+    <div class="input_field">
+      <label for="bombs">Bombs:</label>
+      <input formControlName="bombs" id="bombs" type="bombs">
+    </div>
+    <div class="input_field">
+      <button type="submit" [disabled]="form.invalid || form.disabled">
+        New Game
+      </button>
+    </div>
+  </form>
+
+  <div id="minefield">
+    <table cellpadding="0" cellspacing="0">
+      <tr *ngFor="let row of [].constructor(rows); index as j">
+        <td *ngFor="let col of [].constructor(cols); index as i" class="">
+        </td>
+      </tr>
+    </table>
+  </div>
+</div>
+
+<ng-template #loader>
+  <app-loader></app-loader>
+</ng-template>
