--- a/src/assets/stylesheets/styles.scss
+++ b/src/assets/stylesheets/styles.scss
@@ -76,73 +76,40 @@ header {
 
           &.res_0 {
             background: #bdbdbd;
-            border-top: 0;
-            border-right: 1px solid #7b7b7b;
-            border-bottom: 1px solid #7b7b7b;
-            border-left: 0;
+            border: 1px solid #7b7b7b;
           }
           &.res_1 {
             color: #0000ff;
-            border-top: 0;
-            border-right: 1px solid #7b7b7b;
-            border-bottom: 1px solid #7b7b7b;
-            border-left: 0;
+            border: 1px solid #7b7b7b;
           }
           &.res_2 {
             color: #007b00;
-            border-top: 0;
-            border-right: 1px solid #7b7b7b;
-            border-bottom: 1px solid #7b7b7b;
-            border-left: 0;
+            border: 1px solid #7b7b7b;
           }
           &.res_3 {
             color: #ff0000;
-            border-top: 0;
-            border-right: 1px solid #7b7b7b;
-            border-bottom: 1px solid #7b7b7b;
-            border-left: 0;
+            border: 1px solid #7b7b7b;
           }
           &.res_4 {
             color: #00007b;
-            border-top: 0;
-            border-right: 1px solid #7b7b7b;
-            border-bottom: 1px solid #7b7b7b;
-            border-left: 0;
+            border: 1px solid #7b7b7b;
           }
           &.res_5 {
             color: #7b0000;
-            border-top: 0;
-            border-right: 1px solid #7b7b7b;
-            border-bottom: 1px solid #7b7b7b;
-            border-left: 0;
+            border: 1px solid #7b7b7b;
           }
           &.res_6 {
             color: #007b7b;
-            border-top: 0;
-            border-right: 1px solid #7b7b7b;
-            border-bottom: 1px solid #7b7b7b;
-            border-left: 0;
+            border: 1px solid #7b7b7b;
           }
           &.res_7 {
             color: #000000;
-            border-top: 0;
-            border-right: 1px solid #7b7b7b;
-            border-bottom: 1px solid #7b7b7b;
-            border-left: 0;
+            border: 1px solid #7b7b7b;
           }
           &.res_8 {
             color: #7b7b7b;
-            border-top: 0;
-            border-right: 1px solid #7b7b7b;
-            border-bottom: 1px solid #7b7b7b;
-            border-left: 0;
+            border: 1px solid #7b7b7b;
           }
-
-
-
-
-
-
         }
       }
     }
