--- a/src/app/minesweeper/minesweeper.component.html
+++ b/src/app/minesweeper/minesweeper.component.html
@@ -26,7 +26,10 @@
   <div id="minefield">
     <table cellpadding="0" cellspacing="0">
       <tr *ngFor="let row of [].constructor(rows); index as j">
-        <td *ngFor="let col of [].constructor(cols); index as i" class="">
+        <td
+          *ngFor="let col of [].constructor(cols); index as i"
+          (click)="cellClick(i, j)"
+          [id]="i + '_' + j">
         </td>
       </tr>
     </table>
