--- a/src/app/minesweeper/minesweeper.component.html
+++ b/src/app/minesweeper/minesweeper.component.html
@@ -29,7 +29,9 @@
         <td
           *ngFor="let col of [].constructor(cols); index as i"
           (click)="cellClick(i, j)"
-          [id]="i + '_' + j">
+          [id]="i + '_' + j"
+          [class]="initClass(i + '_' + j)">
+          {{initValue(i + '_' + j)}}
         </td>
       </tr>
     </table>
