--- a/src/assets/stylesheets/styles.scss
+++ b/src/assets/stylesheets/styles.scss
@@ -73,42 +73,61 @@ header {
           border-right-color: #7b7b7b;
           border-bottom-color: #7b7b7b;
           font-weight: bold;
+          cursor: pointer;
 
           &.res_0 {
             background: #bdbdbd;
+            padding: 1px;
             border: 1px solid #7b7b7b;
+            cursor: default;
           }
           &.res_1 {
             color: #0000ff;
+            padding: 1px;
             border: 1px solid #7b7b7b;
+            cursor: default;
           }
           &.res_2 {
             color: #007b00;
+            padding: 1px;
             border: 1px solid #7b7b7b;
+            cursor: default;
           }
           &.res_3 {
             color: #ff0000;
+            padding: 1px;
             border: 1px solid #7b7b7b;
+            cursor: default;
           }
           &.res_4 {
             color: #00007b;
+            padding: 1px;
             border: 1px solid #7b7b7b;
+            cursor: default;
           }
           &.res_5 {
             color: #7b0000;
+            padding: 1px;
             border: 1px solid #7b7b7b;
+            cursor: default;
           }
           &.res_6 {
             color: #007b7b;
+            padding: 1px;
             border: 1px solid #7b7b7b;
+            cursor: default;
           }
           &.res_7 {
             color: #000000;
+            padding: 1px;
             border: 1px solid #7b7b7b;
+            cursor: default;
           }
           &.res_8 {
             color: #7b7b7b;
+            padding: 1px;
             border: 1px solid #7b7b7b;
+            cursor: default;
           }
         }
       }
